--- a/public/template.html
+++ b/public/template.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=\, initial-scale=1.0">
-  <title>Ant Design X Chat UI</title>
+  <title>Dify Chat</title>
 </head>
 <body>
    <div id="<%= mountId %>"></div>
