--- a/public/template.html
+++ b/public/template.html
@@ -10,7 +10,7 @@
 		<!-- favicon -->
 		<link
 			rel="icon"
-			href="https://mdn.alipayobjects.com/huamei_iwk9zp/afts/img/A*eco6RrQhxbMAAAAAAAAAAAAADgCCAQ/original"
+			href="./logo.png"
 		/>
 	</head>
 	<body>
