feat:修改网站标题和logo

--- a/packages/react-app/public/template.html
+++ b/packages/react-app/public/template.html
@@ -6,7 +6,7 @@
 			name="viewport"
 			content="width=\, initial-scale=1.0"
 		/>
-		<title>Dify Chat</title>
+		<title>吉安移动多智能体平台</title>
 		<!-- favicon -->
 		<link
 			rel="icon"
