chore(deployment): 添加容器化部署相关配置和文档
- 添加 Docker 部署相关文件，包括环境变量模板、部署脚本和文档
- 新增 react-app 动态环境变量替换功能，优化容器启动流程
- 添加独立部署指南和 DockerHub 发布说明

--- a/packages/react-app/public/template.html
+++ b/packages/react-app/public/template.html
@@ -12,6 +12,7 @@
 			rel="icon"
 			href="./logo.png"
 		/>
+		<script src="./env.js"></script>
 	</head>
 	<body>
 		<div id="<%= mountId %>"></div>
