fix(react-app): 修正静态资源路径为绝对路径，以修复在多级路由下资源加载失败的问题

--- a/packages/react-app/public/template.html
+++ b/packages/react-app/public/template.html
@@ -10,9 +10,9 @@
 		<!-- favicon -->
 		<link
 			rel="icon"
-			href="./logo.png"
+			href="/dify-chat/logo.png"
 		/>
-		<script src="./env.js"></script>
+		<script src="/dify-chat/env.js"></script>
 	</head>
 	<body>
 		<div id="<%= mountId %>"></div>
